# lentille

./: .dockerignore  .gitattributes  .hlint.yaml  CHANGELOG.md  Containerfile  README.md  cabal.project  default.nix
.github/workflows/: container.yaml  haskell.yml  publish-master.yaml
doc/: lentille-doc.cabal
doc/adr/: 0001-record-architecture-decisions.md  0002-choice-of-language.md  0003-choice-of-design.lhs  0003-choice-of-design.md
lentille-gitlab/: lentille-gitlab.cabal
lentille-gitlab/src/Lentille/: GitLab.hs
lentille-gitlab/src/Lentille/GitLab/: MergeRequests.hs
lentille-grpc/: .gitignore  README.md  lentille-grpc.cabal
lentille-grpc/app/: Main.hs
lentille-grpc/client/: client.py
lentille-grpc/src/Lentille/GRPC/: Api.hs
lentille-grpc/src/Monocle/: Search.hs
macroscope/: macroscope.cabal
macroscope/src/Macroscope/: Main.hs
protos/monocle/: search.proto
