cabal-version:       2.4
name:                lentille-grpc
version:             0.1.0.0
synopsis:            Monocle gRPC
description:
    Lentille gRPC is a haskell library to implement the Monocle gRPC API.
    .
homepage:            https://github.com/change-metrics/lentille#readme
bug-reports:         https://github.com/change-metrics/lentille/issues
author:              Monocle authors
maintainer:          Monocle authors <fboucher@redhat.com>
copyright:           2021 Monocle authors
category:            Development
build-type:          Simple
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/change-metrics/lentille.git

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

-- Dependency blocked by https://github.com/awakesecurity/gRPC-haskell/issues/122
-- >=0.1.0 is needed for recent grpc clib
flag with-grpc
  description:         Include experimental dependency
  default:             False
  manual:              True

library
  import:              common-options
  hs-source-dirs:      src
  if flag(with-grpc)
    exposed-modules:   Lentille.GRPC.Api
                     , Monocle.Search
    build-depends:     base                       < 5
                     , containers                 < 0.7
                     , deepseq                    < 1.5
                     , grpc-haskell               >= 0.1.0
                     -- , lentille
                     , proto3-suite               >= 0.4.2.0
                     , proto3-wire                >= 1.2.0
                     , relude                     > 1.0.0.0
                     , vector                     < 0.13

executable lentille-grpc
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  if flag(with-grpc)
    build-depends:     relude                     > 1.0 && < 1.1
                     , lentille-grpc
  else
    buildable:         False
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
